adding trts argument

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,3 +2,6 @@
 
       * [r1] Initial release: brining  a library of breeding scheme optimization questions alive.
       
+
+## TO DO
++ add use of pedigree besides of grm
